# emoji-crafter

./: .gitignore  Cargo.toml  readme.md
src/: document.rs  lib.rs  main.rs  manifest.rs  new.rs  project.rs  render.rs  run.rs
src/renderer/: emoji_renderer.rs  mod.rs  template_renderer.rs
tpl/: emojiset.css  theme.css
