[package]
name = "emoji-crafter"
description = "a command line tool for automating emoji exports from svg, including animation"
license-file = "license.md"
version = "0.0.0"
edition = "2018"

[dependencies]
gif = "0.11"
lazy_static = "1.4"
rayon = "1.5"
regex = "1.5"
resvg = { path = "resvg" }
roxmltree = "0.14"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tiny-skia = "0.6"
toml = "0.5"
usvg = { path = "resvg/usvg" }
webp-animation = "0.2"
