[package]
name = "emoji-crafter"
description = "a command line tool for automating emoji exports from svg, including animation"
license-file = "license.md"
version = "0.1.0"
edition = "2018"

[dependencies]
clearscreen = "1.0"
gif = "0.11"
indexmap = { version = "1.7", features = ["serde"] }
indicatif = "0.16"
lazy_static = "1.4"
notify = "4.0"
rayon = "1.5"
regex = "1.5"
resvg = "0.17"
roxmltree = "0.14"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tiny-skia = "0.6"
tinytemplate = "1.2"
toml = "0.5"
usvg = "0.17"
webp-animation = "0.2"
